--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 SKIP_PREFLIGHT_CHECK=true
+MONGODB_URI=mongodb+srv://velasquez:123456789j@cluster.vdnsq.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
